<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="netology">Netology</string>
    <string name="description_options" translatable="false">Options</string>
    <string name="description_icon_views" translatable="false">iconViews</string>
    <string name="description_icon_likes" translatable="false">iconLikes</string>
    <string name="description_icon_reposts" translatable="false">iconReposts</string>
    <string name="content_text" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → <a href="https://netolo.gy/fyb">https://netolo.gy/fyb</a></string>
    <string name="authorName" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="postDate" translatable="false">11 января в 13:38</string>
    <string name="countViews" translatable="false">5</string>
    <string name="countLikes" translatable="false">10</string>
    <string name="countReposts" translatable="false">5</string>
</resources>

