<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/netology"
        app:layout_constraintBottom_toBottomOf="@id/headerBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/avatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/postDate"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/postDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/headerBarrier"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@sample/posts.json/data/postDate" />

    <ImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_options"
        android:src="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, postDate, options, author" />

    <TextView
        android:id="@+id/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier"
        tools:text="@sample/posts.json/data/contentText" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_spacing"
        app:constraint_referenced_ids="contentText" />

    <TextView
        android:id="@+id/countViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footerBarrier"
        tools:text="@sample/posts.json/data/countViews" />

    <ImageButton
        android:id="@+id/iconViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_icon_views"
        android:src="@drawable/ic_views_24dp"
        app:layout_constraintEnd_toStartOf="@+id/countViews"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier" />

    <TextView
        android:id="@+id/countLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/iconLikes"
        app:layout_constraintTop_toBottomOf="@+id/footerBarrier"
        tools:text="@sample/posts.json/data/countLikes" />

    <ImageButton
        android:id="@+id/iconLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_icon_likes"
        android:src="@drawable/ic_likes_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footerBarrier" />

    <TextView
        android:id="@+id/countReposts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/iconReposts"
        app:layout_constraintTop_toBottomOf="@+id/footerBarrier"
        tools:text="@sample/posts.json/data/countReposts" />

    <ImageButton
        android:id="@+id/iconReposts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/special_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_icon_reposts"
        android:src="@drawable/ic_reposts_24dp"
        app:layout_constraintStart_toEndOf="@+id/countLikes"
        app:layout_constraintTop_toBottomOf="@+id/footerBarrier" />


</androidx.constraintlayout.widget.ConstraintLayout>
