<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/netology"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintBottom_toBottomOf="@id/headerBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/avatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/headerBarrier"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_options"
        app:icon="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published, menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        android:lineSpacingMultiplier="1"
        android:paddingBottom="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier"
        tools:ignore="VisualLintLongText"
        tools:text="@sample/posts.json/data/content" />

    <ImageView
        android:id="@+id/video_preview"
        android:layout_width= "match_parent"
        android:layout_height="@dimen/video_height"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/video"
        android:src="@drawable/video"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/video_preview"
        app:layout_constraintRight_toRightOf="@id/video_preview"
        app:layout_constraintTop_toTopOf="@id/video_preview"
        app:layout_constraintBottom_toBottomOf="@id/video_preview"
        android:checkable="true"
        android:contentDescription="@string/video"
        app:icon="@drawable/ic_play_48dp"
        style="@style/Widget.AppTheme.PlayButton"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="video_preview,play" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="video_preview" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_icon_likes"
        app:icon="@drawable/ic_like_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier"
        tools:checked="@sample/posts.json/data/likedByMe"
        tools:ignore="TextContrastCheck"
        tools:text="@sample/posts.json/data/likesCount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_button_padding"
        android:contentDescription="@string/description_icon_reposts"
        app:icon="@drawable/ic_reposts_24dp"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier"
        tools:ignore="TextContrastCheck"
        tools:text="@sample/posts.json/data/shareCount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_button_padding"
        app:icon="@drawable/ic_views_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footerBarrier"
        tools:ignore="TextContrastCheck"
        tools:text="@sample/posts.json/data/viewsCount" />


</androidx.constraintlayout.widget.ConstraintLayout>
